--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-# Learn more https://docs.github.com/en/get-started/getting-started-with-git/ignoring-files
+.history
 
 # dependencies
 node_modules/
