--- a/.prettierrc
+++ b/.prettierrc
@@ -4,5 +4,8 @@
   "singleQuote": false,
   "bracketSameLine": true,
   "trailingComma": "es5",
-  "arrowParens": "avoid"
+  "arrowParens": "avoid",
+  "jsxSingleQuote": false,
+  "bracketSpacing": true,
+  "proseWrap": "preserve"
 }
