--- a/package.json
+++ b/package.json
@@ -14,12 +14,13 @@
     "format": "prettier --write .",
     "format:check": "prettier --check .",
     "type-check": "tsc --noEmit",
-    "validate": "npm run lint && npm run type-check && echo 'Validation passed!'",
     "clean": "rm -rf .expo && rm -rf node_modules/.cache"
   },
   "jest": {
     "preset": "jest-expo",
-    "setupFilesAfterEnv": ["<rootDir>/jest.setup.js"],
+    "setupFilesAfterEnv": [
+      "<rootDir>/jest.setup.js"
+    ],
     "testPathIgnorePatterns": [
       "<rootDir>/.history/",
       "<rootDir>/node_modules/"
@@ -48,6 +49,7 @@
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@cspell/dict-html-symbol-entities": "^4.0.3",
+    "@testing-library/react-native": "^13.2.0",
     "@types/react": "~19.0.10",
     "@typescript-eslint/eslint-plugin": "^8.34.0",
     "@typescript-eslint/parser": "^8.34.0",
@@ -59,7 +61,6 @@
     "jest": "^29.2.1",
     "jest-expo": "~53.0.7",
     "prettier": "^3.5.3",
-    "react-test-renderer": "19.0.0",
     "typescript": "~5.8.3"
   },
   "private": true
