--- a/package.json
+++ b/package.json
@@ -1,7 +1,30 @@
 {
-  "name": "andeau",
+  "name": "expo-typescript-theme-template",
   "main": "expo-router/entry",
   "version": "1.0.0",
+  "description": "Expo Router + TypeScript template with dark/light theme management and comprehensive development tooling",
+  "keywords": [
+    "expo",
+    "react-native",
+    "typescript",
+    "theme",
+    "template",
+    "expo-router",
+    "dark-mode",
+    "eslint",
+    "prettier",
+    "jest"
+  ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/YOUR_USERNAME/expo-typescript-theme-template.git"
+  },
+  "bugs": {
+    "url": "https://github.com/YOUR_USERNAME/expo-typescript-theme-template/issues"
+  },
+  "homepage": "https://github.com/YOUR_USERNAME/expo-typescript-theme-template#readme",
+  "author": "Your Name <your.email@example.com>",
+  "license": "MIT",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
@@ -11,6 +34,7 @@
     "test:ci": "jest --no-watchAll --passWithNoTests",
     "lint": "expo lint",
     "lint:fix": "expo lint --fix",
+    "lint:md": "markdownlint \"**/*.md\" --ignore node_modules",
     "format": "prettier --write .",
     "format:check": "prettier --check .",
     "type-check": "tsc --noEmit",
@@ -60,6 +84,7 @@
     "eslint-plugin-react": "^7.37.5",
     "jest": "^29.2.1",
     "jest-expo": "~53.0.7",
+    "markdownlint-cli": "^0.45.0",
     "prettier": "^3.5.3",
     "typescript": "~5.8.3"
   },
