--- a/package.json
+++ b/package.json
@@ -17,13 +17,13 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/YOUR_USERNAME/expo-typescript-theme-template.git"
+    "url": "https://github.com/twocs/expo-typescript-theme-template.git"
   },
   "bugs": {
-    "url": "https://github.com/YOUR_USERNAME/expo-typescript-theme-template/issues"
+    "url": "https://github.com/twocs/expo-typescript-theme-template/issues"
   },
-  "homepage": "https://github.com/YOUR_USERNAME/expo-typescript-theme-template#readme",
-  "author": "Your Name <your.email@example.com>",
+  "homepage": "https://github.com/twocs/expo-typescript-theme-template#readme",
+  "author": "Tom Anderson <twocs@users.noreply.github.com>",
   "license": "MIT",
   "scripts": {
     "start": "expo start",
