--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "format": "prettier --write .",
     "format:check": "prettier --check .",
     "type-check": "tsc --noEmit",
+    "validate": "bash scripts/validate.sh",
     "clean": "rm -rf .expo && rm -rf node_modules/.cache"
   },
   "jest": {
