--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "format:check": "prettier --check .",
     "type-check": "tsc --noEmit",
     "validate": "bash scripts/validate.sh",
+    "update-docs": "bash scripts/fetch-llm-docs.sh",
     "clean": "rm -rf .expo && rm -rf node_modules/.cache"
   },
   "jest": {
